# cabal-talk

./: .gitignore  cabal.md  index.html  readme.md
docs/Cabal-described/: Cabal-described.haddock  Distribution-Described.html  Distribution-Utils-CharSet.html  Distribution-Utils-GrammarRegex.html  doc-index.json
docs/Cabal-hooks/: Cabal-hooks.haddock  Distribution-Simple-SetupHooks.html  doc-index-36.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-J.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-V.html  doc-index.html  doc-index.json  index.html
docs/Cabal-syntax/: Cabal-syntax.haddock  Distribution-Backpack.html  Distribution-CabalSpecVersion.html  Distribution-Compat-Binary.html  Distribution-Compat-CharParsing.html  Distribution-Compat-DList.html  Distribution-Compat-Exception.html  Distribution-Compat-Graph.html  Distribution-Compat-Lens.html  Distribution-Compat-MonadFail.html  Distribution-Compat-Newtype.html  Distribution-Compat-NonEmptySet.html  Distribution-Compat-Parsing.html  Distribution-Compat-Semigroup.html  Distribution-Compat-Typeable.html  Distribution-Compiler.html  Distribution-FieldGrammar-Class.html  Distribution-FieldGrammar-FieldDescrs.html  Distribution-FieldGrammar-Newtypes.html  Distribution-FieldGrammar-Parsec.html  Distribution-FieldGrammar-Pretty.html  Distribution-FieldGrammar.html  Distribution-Fields-ConfVar.html  Distribution-Fields-Field.html  Distribution-Fields-Lexer.html  Distribution-Fields-LexerMonad.html  Distribution-Fields-ParseResult.html  Distribution-Fields-Parser.html  Distribution-Fields-Pretty.html  Distribution-Fields.html  Distribution-InstalledPackageInfo.html  Distribution-License.html  Distribution-ModuleName.html  Distribution-Package.html  Distribution-PackageDescription-Configuration.html  Distribution-PackageDescription-FieldGrammar.html  Distribution-PackageDescription-Parsec.html  Distribution-PackageDescription-PrettyPrint.html  Distribution-PackageDescription-Quirks.html  (+147 more)
examples/hooks/custom-preproc/: SetupHooks.hs  custom-preproc.cabal
examples/hooks/custom-preproc/exe/: Lib.hs-mypp
examples/hooks/custom-preproc/pp/: Main.hs
examples/hooks/system-info/: SetupHooks.hs  system-info.cabal
examples/hooks/system-info/src/: Lib.hs
examples/hooks/xy/: SetupHooks.hs  xy.cabal
(+456 files in other folders)
