cabal-version: 3.14
name:          custom-preproc
version:       0.1.0.0
license:       BSD-3-Clause
author:        sheaf
maintainer:    sheaf
category:      Development
build-type:    Hooks

custom-setup
  setup-depends:
      base
        >= 4.18 && < 5.0
    , basic-cpuid
        >= 0.1  && < 0.2
    , Cabal
        >= 3.13 && < 3.17
    , Cabal-hooks
       ^>= 0.1
    , containers
        >= 0.6  && < 0.8

common common
  ghc-options: -Wall
  build-depends:
    base >= 4.18 && < 5.0,
    containers, directory, filepath

-- We're defining the custom preprocessor within this package for illustration,
-- but in practice it would usually be from another package (would work the same way).
executable myPreProc
  import:
    common
  hs-source-dirs:
    pp
  main-is:
    Main.hs
  default-language:
    Haskell2010

executable exe
  import:
    common
  hs-source-dirs:
    exe
  main-is:
    Main.hs
  other-modules:
    Lib
  autogen-modules:
    Lib
  default-language:
    Haskell2010
  build-tool-depends:
    custom-preproc:myPreProc
