cabal-version: 3.14
name:          system-info
version:       0.1.0.0
license:       BSD-3-Clause
author:        sheaf
maintainer:    sheaf
category:      Development
build-type:    Hooks

custom-setup
  setup-depends:
      base
        >= 4.18 && < 5.0
    , basic-cpuid
        >= 0.1  && < 0.2
    , Cabal
        >= 3.13 && < 3.17
    , Cabal-hooks
       ^>= 0.1

common common
  ghc-options: -Wall
  build-depends:
    base >= 4.18 && < 5.0,
    containers, directory, filepath

library
  import:
    common
  exposed-modules:
    Lib
  hs-source-dirs:
    src
  default-language:
    Haskell2010
